--- a/index.html
+++ b/index.html
@@ -1,33 +1,40 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
-
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
-  
   <title>Frontend Mentor | NFT preview card component</title>
-
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
+  <link href="styles/reset.css" rel="stylesheet">
+  <link href="styles/index.css" rel="stylesheet">
 </head>
+
 <body>
 
-  Equilibrium #3429
-
-  Our Equilibrium collection promotes balance and calm.
-
-  0.041 ETH
-  3 days left
-  
-  Creation of Jules Wyvern
-
-  <div class="attribution">
-    Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+  <div class="card">
+    <div class="card__preview">
+      <img class="card__illustration" src="images/image-equilibrium.jpg" alt="">
+    </div>
+    <h1 class="card__title">Equilibrium #3429</h1>
+    <p class="card__content">Our Equilibrium collection promotes balance and calm.</p>
+    <div class="card__meta">
+      <p class="card__price">
+        <img class="card__price-icon" src="images/icon-ethereum.svg" alt="Currency">
+        <span class="card__price-content">0.041 ETH</span>
+      </p>
+      <p class="card__time">
+        <img class="card__time-icon" src="images/icon-ethereum.svg" alt="Currency">
+        <span class="card__price-content">3 days left</span>
+      </p>
+    </div>
+    <hr>
+    <img class="card__profile" src="images/image-avatar.png" alt="">
+    <p class="card__credit">
+      Creation of <span>Jules Wyvern</span>
+    </p>
   </div>
 </body>
+
 </html>
