feat: styled markup

--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
   <!-- displays site properly based on user's device -->
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
   <title>Frontend Mentor | NFT preview card component</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap" rel="stylesheet">
   <link href="styles/reset.css" rel="stylesheet">
   <link href="styles/index.css" rel="stylesheet">
 </head>
@@ -20,20 +23,22 @@
     <h1 class="card__title">Equilibrium #3429</h1>
     <p class="card__content">Our Equilibrium collection promotes balance and calm.</p>
     <div class="card__meta">
-      <p class="card__price">
-        <img class="card__price-icon" src="images/icon-ethereum.svg" alt="Currency">
-        <span class="card__price-content">0.041 ETH</span>
+      <p class="card__item">
+        <img class="card__item-icon" src="images/icon-ethereum.svg" alt="Currency">
+        <span class="card__item-content card__item-content--green">0.041 ETH</span>
       </p>
-      <p class="card__time">
-        <img class="card__time-icon" src="images/icon-ethereum.svg" alt="Currency">
-        <span class="card__price-content">3 days left</span>
+      <p class="card__item">
+        <img class="card__item-icon" src="images/icon-clock.svg" alt="Currency">
+        <span class="card__item-content">3 days left</span>
       </p>
     </div>
-    <hr>
-    <img class="card__profile" src="images/image-avatar.png" alt="">
-    <p class="card__credit">
-      Creation of <span>Jules Wyvern</span>
-    </p>
+    <div class="card__divider"></div>
+    <div class="card__footer">
+      <img class="card__profile" src="images/image-avatar.png" alt="">
+      <p class="card__credit">
+        Creation of <span>Jules Wyvern</span>
+      </p>
+    </div>
   </div>
 </body>
 
